--- a/03-EF-Core/final/westcoast-cars.web/Views/Shared/_Layout.cshtml
+++ b/03-EF-Core/final/westcoast-cars.web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/css/navigation.css">
+    <link rel="stylesheet" href="~/css/utilities.css">
     <link rel="stylesheet" href="~/css/site.css">
     <script src="https://kit.fontawesome.com/55174c58a9.js" crossorigin="anonymous"></script>
     <title>@ViewData["Title"] - Westcoast Cars</title>
