Finalized solution for 05-More-Relations

--- a/05-More-Relations/final/westcoast-cars.web/Views/Vehicles/Create.cshtml
+++ b/05-More-Relations/final/westcoast-cars.web/Views/Vehicles/Create.cshtml
@@ -30,6 +30,11 @@
             <span class="error" asp-validation-for="FuelType"></span>
         </div>
         <div class="form-control">
+            <label asp-for="TransmissionsType"></label>
+            <select asp-for="TransmissionsType" asp-items="Model.TransmissionsTypes"></select>
+            <span class="error" asp-validation-for="FuelType"></span>
+        </div>
+        <div class="form-control">
             <label asp-for="Mileage"></label>
             <input asp-for="Mileage" type="text">
             <span class="error" asp-validation-for="Mileage"></span>
